# kiro-analytics

./: .gitignore  README.md  README_en.md  README_es.md  kiro-users-example.csv  pyproject.toml
.kiro/steering/: product.md  structure.md  tech.md
examples/: sample-report.html
infrastructure/: app.py  pipeline_stack.py  state_machine.py
infrastructure/iam-policies/: README.md  kiro-analytics-cdk-bootstrap.json  kiro-analytics-pipeline-deploy.json
src/: models.py  pipeline.py
src/analyzers/: ai_analyzer.py
src/collectors/: __init__.py  collector.py  sources.py
src/generators/: csv_generator.py  html_generator.py  index_generator.py  report_storage.py  site_publisher.py
src/notifiers/: notifier.py
src/orchestrator/: __init__.py  handler.py  metrics_emitter.py  retry_handler.py  temp_cleanup.py
src/processors/: categorizer.py  dynamodb_writer.py  metrics_processor.py
src/utils/: __init__.py  date_utils.py  execution_summary.py  s3_utils.py  text_utils.py
src/validators/: __init__.py  input_validator.py  roster_validator.py
tests/: test_pipeline_integration.py
tests/integration/: test_cdk_stack.py  test_pipeline_e2e.py
tests/pbt/: test_categorization_pbt.py  test_html_completeness_pbt.py  test_inactive_users_pbt.py  test_input_validation_pbt.py  test_metadata_cleaning_pbt.py  test_metrics_aggregation_pbt.py  test_payload_truncation_pbt.py  test_pbt_execution_summary.py  test_pbt_index_generator.py  test_report_naming_pbt.py  test_roster_validation_pbt.py  test_schedule_dates_pbt.py  test_user_filtering_pbt.py
tests/unit/: test_ai_analyzer.py  (+20 more)
